wrapped header in container and made it fixed to keep width at 960px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,45 +2,83 @@ body{
     background-image: url('background.png');
     margin:0 auto;
 }
+
+
 .header{
     background-color: #ffffff;
-    /* position: static; */
+    position: fixed;
     width: 100%;
     top:0;
     border-bottom: 2px solid #cccccc;
-    padding:5px;
     margin-bottom: 30px;
 }
+
+.container{
+    width: 960px;
+    margin:auto;
+}
+h1{
+    background-color: #4aaaa5;
+    float:left;
+    /* position:relative; */
+    /* left:360px; */
+    padding: 20px;
+    width:200px;
+    text-align:center;
+    margin:0;
+}
+
+/* navigation menu */
+.nav{
+    float:right;
+    top:0;
+    right:0;
+}
+
+
+nav ul{
+    margin:0;
+    /* margin-right:360px; */
+    padding:0;
+    list-style:none;
+}
+
+nav li{
+    display: inline-block;
+    /* margin-left: 20px; */
+}
+
+
+.header::after{
+    content:" ";
+    display:block;
+    clear:both;
+}
+
+/* Content */
+
 
 .content{
     width:920px;
     background-color:#ffffff;
     border: 1px solid #dddddd;
     padding:20px;
-    margin: 0 auto;
+    margin: 7% auto;
     
 }
 
-h1{
-    background-color: #4aaaa5;
-    padding: 10px;
-    width:200px;
-}
 
-.nav{
-    position:absolute;
-    top:0;
-    right:0;
-}
+
+
 
 #headshot{
     height:200px;
     width: 200px;
 }
 
-.clearfix::after{
+/* .clearfix::after{
     content:" ";
     clear:both;
     display:block;
 
-}
+} */
